--- a/src/app/shared/banking/banking.component.html
+++ b/src/app/shared/banking/banking.component.html
@@ -1,19 +1,25 @@
 <p>
-    <strong>Olá Guilherme olveira</strong>
-    ag: 999, co: 9999-9
+  <strong>Olá, Dener Troquatte</strong>
+  <br />
+  Ag: 9999, CO: 99999-9
 </p>
 
 <p>
-    Poupança: <span id="get-poupanca">{{getPoupanca | currency : 'BRL'}}</span>
-    <input type="text" id='input-sacar' #sacar placeholder="sacar">
-    <button id='sacar' (click)="sacarValor(sacar.value)">Sacar</button>
+  Poupança: R$ <span id="get-poupanca">{{ getPoupanca }}</span>
+  <br />
+
+  <input id="input-sacar" type="text" #sacar />
+  <button id="sacar" (click)="setSacar(sacar.value)">Sacar</button>
 </p>
 
 <p>
-    Carteira: <span>{{getCarteira | currency : 'BRL'}}</span>
+  Carteira: R$ <span id="get-carteira">{{ getCarteira }}</span>
+  <br />
 
-    <input type="text" id='input-depositar' #depositar placeholder="Depositar">
-    <button id="depositar" (click)="DepositarValor(depositar.value)">Depositar</button>
+  <input id="input-depositar" type="text" #depositar />
+  <button id="depositar" (click)="setDepositar(depositar.value)">
+    Depositar
+  </button>
 </p>
 
 <app-list></app-list>
